[package]
name = "certified-vars"
version = "0.1.2"
edition = "2018"
description = "Certified variable friendly data structures for the Internet Computer."
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
license = "Apache-2.0"
repository = "https://github.com/Psychedelic/certified-vars"
homepage = "https://docs.rs/certified-vars"
documentation = "https://docs.rs/certified-vars"
categories = ["data-structures"]
keywords = ["internet-computer", "canister", "cdk", "fleek"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
sha2 = "0.9.8"
serde = { version="1.0.116", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
hex = "0.4.3"
candid = "0.7.10"
ic-cdk = "0.3.3"
